2008-05-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in:
   Post-release version bump.
   Display install location of the plugin binary and separately the
   location of other files like translations for clarity.


2008-05-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/*, src/*, *:
   Initial import of spellcheck plugin.
 * Makefile.am:
   Add missing dist-bzip2 and sign targets.
 * Initial 0.1 release of the spellcheck plugin.
